Miyoo Mini Updated GPIO table.

--- a/handheld/miyoo-mini/pinout.htm
+++ b/handheld/miyoo-mini/pinout.htm
@@ -51,13 +51,16 @@
 如下：<br>
 <img src="pinout/4.jpg" class="maxSize"><br><br>
 
-可用腳位：UART1(P38~P39)、SPI0(P79~P82)<br>
+可用腳位：UART1、SPI0<br>
 <img src="pinout/5.jpg" class="maxSize"><br><br>
 
 定義如下：<br>
-<img src="pinout/1.jpg" class="maxSize"><br><br>
+<img src="pinout/1.jpg" class="maxSize"><br>
 <img src="pinout/2.jpg" class="maxSize"><br>
-<img src="pinout/3.jpg" class="maxSize"><br>
+<img src="pinout/3.jpg" class="maxSize"><br><br>
+
+GPIO：<br>
+<img src="pinout/6.jpg" class="maxSize">
 </p>
 
 <p>
