Miyoo Mini In order to has multiplayer feature, I decided to do hardware mod on 3.5mm jack port. HC-05 bluetooth module is the best choice for wireless connection module. It can be paired with each other, which support 2 players. So far the voltage of VCC I can find is only 2.75v, which not sure whether it works on HC-05 module or not. This project is still on going so far.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5789,6 +5789,10 @@ SDL Key</a><br>
 增強振動馬達</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini/mod_bluetooth.htm">
+改造藍芽模組</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini/uart.htm">
 焊接UART腳位</a><br>
 
