Miyoo Mini There 2 specific apps under /etc folder, which are fw_setenv and fw_printenv, for setting bootloader environment variables. We can use fw_setenv to set some specific options, ex: boot from external sdcard. If Miyoo Mini cannot boot due to invalid options you set by fw_setenv, you can re-flash miyoo283_fw.img to fix brick issue. But how many option we can use is still under testing, so, carefully to use this app !

--- a/handheld.htm
+++ b/handheld.htm
@@ -5896,6 +5896,10 @@ SDL Key</a><br>
   partitions</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="handheld/miyoo-mini/stock_fwenv.htm">
+  fw_printenv</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="handheld/miyoo-mini/stock_main.htm">
   /customer/main</a><br>
 
