XT897 Finally, UART pins are found from PCB by PostMarketOS team. It is very useful for debug when porting kernel or bootloader. 3.5mm Jack used as UART output pin. According to experiment, it can connect with PL-2303(3.3v) and work.

--- a/phone.htm
+++ b/phone.htm
@@ -1667,6 +1667,10 @@ Motorola XT897</h3>
 介紹</a><br>
 
 &lowast;
+<a href="phone/xt897/uart.htm">
+焊接UART</a><br>
+
+&lowast;
 <a href="phone/xt897/joystick.htm">
 自製遊戲手把(8Bitdo)</a><br>
 
