XT897 User can use /dev/ttyHSL0 to open UART for communication. It has been tested under Sailfish OS via minicom.

--- a/phone/xt897/uart.htm
+++ b/phone/xt897/uart.htm
@@ -75,7 +75,7 @@ RXD接到MIC，TXD接到Left Audio<br>
 雖然XT897 UART是1.8v，不過，司徒連接到USB轉UART(3.3v)是可以動作且沒有燒掉<br>
 <img src="uart/7.jpg" class="maxSize"><br><br>
 
-Baudrate: 115200bps
+/dev/ttyHSL0,115200
 </p>
 <pre>
 ** Welcome to MBM Next Generation **
