XT897 Setup Debian 8(Jessie) by using debootstrap. It can boot into tty console via ttyHSL0. Modified kernel needs to be flashed into XT897 before booting from MicroSD. So far, only ext3 partition can be used for Debian 8 due to support issue in old kernel. All of steps listed in this pages are operated on PC.

--- a/phone.htm
+++ b/phone.htm
@@ -1921,6 +1921,13 @@ Motorola XT897</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/xt897/sdk_local.htm">
   如何不透過VirtualBox執行</a><br>
+
+&oplus;
+<b>Native Debian</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="phone/xt897/debian_jessie.htm">
+  安裝系統(Jessie)</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
