XT897 It can boot into Debian ttyHSL0 console by using Sailfish kernel source. So far, Video4Linux causes Debian crash when starts. Video4Linux is disabled from kernel by default.

--- a/phone.htm
+++ b/phone.htm
@@ -1928,6 +1928,10 @@ Motorola XT897</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/xt897/debian_jessie.htm">
   安裝系統(Jessie)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="phone/xt897/debian_build_kernel.htm">
+  build kernel 3.0.101</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
