XT897 I don't know why TWRP forcibly set console as null string by default. For quick solution, I pass 2 console parameters into --cmdline for parsing.

--- a/phone.htm
+++ b/phone.htm
@@ -1932,6 +1932,10 @@ Motorola XT897</h3>
   &emsp;&emsp;&lowast;
   <a href="phone/xt897/debian_build_kernel.htm">
   build kernel 3.0.101</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="phone/xt897/debian_console_null.htm">
+  為何Kernel沒有輸出任何Printk訊息</a><br>
 <br><br><br><br>
 
 <div id="pro1"></div>
