XT897 I don't why VSYNC is implemented in FBIOPAN_DISPLAY in msm_fb.c file. It causes refresh rate drop due to waiting for complete. Using FBIO_WAITFORVSYNC is more reasonable than waiting in FBIOPAN_DISPLAY.

--- a/phone.htm
+++ b/phone.htm
@@ -1934,6 +1934,10 @@ Motorola XT897</h3>
   build kernel 3.0.101</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="phone/xt897/debian_pandisplay.htm">
+  為何Framebuffer更新很慢</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/xt897/debian_console_null.htm">
   為何Kernel沒有輸出任何Printk訊息</a><br>
 <br><br><br><br>
