XT897 There was an Oops happended in vt_console_print() due to sleep in msm_fb_pan_idle(). This is why Debian crashes if FrameBuffer Console is enabled in kernel.

--- a/phone.htm
+++ b/phone.htm
@@ -1934,6 +1934,10 @@ Motorola XT897</h3>
   build kernel 3.0.101</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="phone/xt897/debian_spinlock.htm">
+  關於msm_fb_pan_idle crash問題</a><br>
+  
+  &emsp;&emsp;&lowast;
   <a href="phone/xt897/debian_pandisplay.htm">
   為何Framebuffer更新很慢</a><br>
   
