PSP Go It is time to write something for my favorite handheld. So, removed some topics, which are out of date. I would like to write some topics that are based on docker environment. Using docker environment is safer because thare are many issues I found in my pspdev toolchain.

--- a/handheld/pspgo/build_toolchain.htm
+++ b/handheld/pspgo/build_toolchain.htm
@@ -22,15 +22,15 @@
   <meta name="googlebot" content="noarchive" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
 
-  <link rel="shortcut icon" href="../../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../../css/print.css" media="print" />
+  <link rel="shortcut icon" href="../../website.ico">
+  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
+  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
+  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
+  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
+  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
-  <script type="text/javascript" src="../../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shCore.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -43,9 +43,9 @@
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <div id="wrapper">
 <div id="content">
-<script type="text/javascript" src="../../../header.js"></script>
+<script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PSP Go &gt;&gt; PSPDev</h3>
+<h3>PSP Go</h3>
 <p><b>build psptoolchain</b></p>
 <hr size="1">
 <p>
@@ -83,7 +83,7 @@ $ ./toolchain.sh
 <p>
 可以單獨執行某個編譯步驟，如：<b>./toolchain.sh 1</b><br><br>
 
-基本上應該是不會有太大的問題，使用者如果不想動手編譯，可以使用司徒編譯好的<a href="https://github.com/steward-fu/pspgo/releases/download/v1.0/toolchain.tar.gz">Toolchain</a>檔案，用法如下：
+使用者如果不想動手編譯，可以使用司徒編譯好的<a href="https://github.com/steward-fu/pspgo/releases/download/v1.0/toolchain.tar.gz">Toolchain</a>檔案，用法如下：
 </p>
 <pre>
 $ cd
@@ -95,7 +95,7 @@ $ export PATH=$PATH:$PSPDEV/bin
 </pre><br>
 
 <p>
-<br><a href="../../../handheld.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
