--- a/handheld/pspgo/extended_battery.htm
+++ b/handheld/pspgo/extended_battery.htm
@@ -49,7 +49,7 @@
 <p><b>電池厚蓋</b></p>
 <hr size="1">
 <p>
-感謝開源掌機群群友win2next製作這款PSP Go厚電背蓋，並且贈送給司徒，而對這款厚蓋有興趣的使用者，可以到淘寶搜尋一下，當然也可以加入開源掌機群，直接跟他購買。<br>
+感謝開源掌機群群友win2next製作這款PSP Go厚電背蓋，並且贈送給司徒，而對這款厚蓋有興趣的使用者，可以到淘寶搜尋一下，當然也可以加入開源掌機群，直接跟他購買<br>
 <img src="extended_battery/1.jpg" class="maxSize"><br><br>
 
 厚蓋正面<br>
@@ -69,7 +69,6 @@
 
 原本厚度1.5cm<br>
 <img src="extended_battery/7.jpg" class="maxSize"><br><br>
-
 
 新的厚度為2.5cm<br>
 <img src="extended_battery/8.jpg" class="maxSize"><br><br>
