--- a/handheld.htm
+++ b/handheld.htm
@@ -3729,28 +3729,9 @@ LIP1412 3.7V 1860mA電池</a><br>
 <a href="handheld/pspgo/battery_1250ma.htm">
 HTC Kaiser 3.7V 1250mA電池</a><br>
 
-&oplus;
-<b>PSPDev</b><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="handheld/pspgo/pspdev/build_toolchain.htm">
-  build psptoolchain</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="handheld/pspgo/pspdev/build_atari2600-1.1.4.htm">
-  build atari2600-1.1.4</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="handheld/pspgo/pspdev/build_atari7800-1.2.0.htm">
-  build atari7800-1.2.0</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="handheld/pspgo/pspdev/build_atari800-2.1.0.1.htm">
-  build atari800-2.1.0.1</a><br>
-
-  &emsp;&emsp;&lowast;
-  <a href="handheld/pspgo/pspdev/build_colecovision-2.6.1.htm">
-  build colecovision-2.6.1</a><br>
+&lowast;
+<a href="handheld/pspgo/build_toolchain.htm">
+build psptoolchain</a><br>
 <br><br><br><br>
 
 <div id="psv"></div>
