GGM Added LCD_CS, LCD_RD, LCD_RS and LCD_WR pins.

--- a/handheld/ggm/pin.htm
+++ b/handheld/ggm/pin.htm
@@ -74,6 +74,10 @@
 <tr><td>LCD DB7</td><td>PD8</td></tr>
 <tr><td>LCD TE</td><td>PD9</td></tr>
 <tr><td>LCD BL</td><td>PE12</td></tr>
+<tr><td>LCD CS</td><td>PD21</td></tr>
+<tr><td>LCD RD</td><td>PD20</td></tr>
+<tr><td>LCD RS</td><td>PD19</td></tr>
+<tr><td>LCD WR</td><td>PD18</td></tr>
 <tr><td>FLASH MOSI</td><td>PC3</td></tr>
 <tr><td>FLASH MISO</td><td>PC2</td></tr>
 <tr><td>FLASH CS</td><td>PC1</td></tr>
