GGM It is time to test button to see whether it works or not. User needs to mod GGM hardware before testing.

--- a/handheld.htm
+++ b/handheld.htm
@@ -3847,6 +3847,10 @@ Game Gear Micro</h3>
 終極改造</a><br>
 
 &lowast;
+<a href="handheld/ggm/btn_test.htm">
+按鍵測試系統</a><br>
+
+&lowast;
 <a href="handheld/ggm/uart.htm">
 焊接UART接頭</a><br>
 
