SDL v1.2 If video resolution user requests doesn't find in default lists, set SDL_FB_BROKEN_MODES to add it into default lists.

--- a/program.htm
+++ b/program.htm
@@ -588,6 +588,10 @@ SDL</h3>
   SDL_VIDEODRIVER支援類型</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/sdl/v1.2/broken_mode.htm">
+  SDL_FB_BROKEN_MODES用途</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/sdl/v1.2/flip_updaterect.htm">
   SDL_Flip()、SDL_UpdateRect()</a><br>
 
@@ -728,6 +732,10 @@ SDL</h3>
   &emsp;&emsp;&lowast;
   <a href="program/sdl/v1.2/videodrv.htm">
   SDL_VIDEODRIVER支援類型</a><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/sdl/v1.2/broken_mode.htm">
+  SDL_FB_BROKEN_MODES用途</a><br>
 
 &oplus;
 <b>OpenGL ES 2.0</b><br>
