GGM Here is note to write down something related to framebuffer driver for reference later. In framebuffer driver, real resolution is 240x240 but 240x195 for SDL program. If user needs to use double buffer, it needs remap fb0 buffer to this purpose.

--- a/handheld.htm
+++ b/handheld.htm
@@ -3859,6 +3859,10 @@ Game Gear Micro</h3>
 如何進入燒錄模式</a><br>
 
 &lowast;
+<a href="handheld/ggm/fb0.htm">
+FrameBuffer架構</a><br>
+
+&lowast;
 <a href="handheld/ggm/find_lcd.htm">
 找出LCD初始化代碼</a><br>
 <br><br><br><br>
