GGM PE4 is used to enable or disable audio chip.

--- a/handheld/ggm/pin.htm
+++ b/handheld/ggm/pin.htm
@@ -82,6 +82,7 @@
 <tr><td>FLASH MISO</td><td>PC2</td></tr>
 <tr><td>FLASH CS</td><td>PC1</td></tr>
 <tr><td>FLASH SCK</td><td>PC0</td></tr>
+<tr><td>Audio EN</td><td>PE4</td></tr>
 </table><br>
 
 <p>
