GGM Added framebuffer example (IOCTL) with VSYNC for reference later on.

--- a/handheld.htm
+++ b/handheld.htm
@@ -3872,6 +3872,10 @@ FrameBuffer架構</a><br>
     &emsp;&emsp;&lowast;
     <a href="handheld/ggm/oc.htm">
     Overclock</a><br>
+    
+    &emsp;&emsp;&lowast;
+    <a href="handheld/ggm/fb.htm">
+    Framebuffer</a><br>
 <br><br><br><br>
 
 <div id="gamego"></div>
