--- a/handheld/ggm/pin.htm
+++ b/handheld/ggm/pin.htm
@@ -82,7 +82,13 @@
 <tr><td>FLASH MISO</td><td>PC2</td></tr>
 <tr><td>FLASH CS</td><td>PC1</td></tr>
 <tr><td>FLASH SCK</td><td>PC0</td></tr>
-<tr><td>Audio EN</td><td>PE4</td></tr>
+<tr><td>Audio EN(MOD)</td><td>PE4</td></tr>
+<tr><td>MicroSD D1(MOD)</td><td>PF0</td></tr>
+<tr><td>MicroSD D0(MOD)</td><td>PF1</td></tr>
+<tr><td>MicroSD CLK(MOD)</td><td>PF2</td></tr>
+<tr><td>MicroSD CMD(MOD)</td><td>PF3</td></tr>
+<tr><td>MicroSD D3(MOD)</td><td>PF4</td></tr>
+<tr><td>MicroSD D2(MOD)</td><td>PF5</td></tr>
 </table><br>
 
 <p>
