Miyoo Mini Parasyte rootfs is built from buildroot 2021.11 and based on stock toolchain. So, all of apps or games compiled from Parasyte toolchain need stock libraries while running.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5928,6 +5928,9 @@ SDL Key</a><br>
 
 &oplus;
 <b>Parasyte</b><br>
+  &emsp;&emsp;&lowast;
+  <a href="handheld/miyoo-mini/parasyte_build_buildroot.htm">
+  build buildroot</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="handheld/miyoo-mini/parasyte_build_ffplay.htm">
