--- a/handheld/miyoo-mini/parasyte_build_ffplay.htm
+++ b/handheld/miyoo-mini/parasyte_build_ffplay.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Miyoo Mini</h3>
+<h3>Miyoo Mini &gt;&gt; Parasyte</h3>
 <p><b>build ffplay(SDL 1.2)</b></p>
 <hr size="1">
 <p>
