Miyoo Mini This swiftshader is ported from original google project. I added display interface in FrameBufferMMiyoo.cpp for rendering context. eglUpdateBufferSettings() is added for setting framebuffer pointer from SDL2 library.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5933,6 +5933,10 @@ SDL Key</a><br>
   build buildroot</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="handheld/miyoo-mini/parasyte_build_swiftshader.htm">
+  build swiftshader</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="handheld/miyoo-mini/parasyte_build_ffplay.htm">
   build ffplay(SDL 1.2)</a><br>
 <br><br><br><br>
