Miyoo Mini Append toolchain config.

--- a/handheld/miyoo-mini/parasyte_build_ffplay.htm
+++ b/handheld/miyoo-mini/parasyte_build_ffplay.htm
@@ -56,6 +56,13 @@
 步驟如下：
 </p>
 <pre>
+$ cd
+$ wget https://github.com/steward-fu/miyoo-mini/releases/download/setup/toolchain.tar.gz
+$ tar xvf toolchain.tar.gz
+$ sudo mv mmiyoo /opt
+$ sudo mv prebuilt /opt
+$ export CROSS=/opt/mmiyoo/bin/arm-linux-gnueabihf-
+
 $ rm -rf /tmp/x264
 $ mkdir /tmp/x264
 
