Miyoo Mini typo

--- a/handheld/miyoo-mini/parasyte_build_ffplay.htm
+++ b/handheld/miyoo-mini/parasyte_build_ffplay.htm
@@ -61,7 +61,7 @@ $ wget https://github.com/steward-fu/miyoo-mini/releases/download/setup/toolchai
 $ tar xvf toolchain.tar.gz
 $ sudo mv mmiyoo /opt
 $ sudo mv prebuilt /opt
-$ export CROSS=/opt/mmiyoo/bin/arm-linux-gnueabihf-
+$ export PATH=/opt/mmiyoo/bin/:$PATH
 
 $ rm -rf /tmp/x264
 $ mkdir /tmp/x264
