--- a/handheld.htm
+++ b/handheld.htm
@@ -5929,6 +5929,10 @@ SDL Key</a><br>
 &oplus;
 <b>Parasyte</b><br>
   &emsp;&emsp;&lowast;
+  <a href="handheld/miyoo-mini/parasyte_build_sdl2.htm">
+  build sdl2</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="handheld/miyoo-mini/parasyte_build_buildroot.htm">
   build buildroot</a><br>
 
