GGM It is time to release Linux system for Game Gear Micro handheld (need hardware mod). I prepare boot menu for user to select which system they want to use. It can boot from both NAND flash (stock) or MicroSD (Linux). All of source code have been released in my github page (ggm). I also wrote down something that I changed in source code for reference.

--- a/handheld.htm
+++ b/handheld.htm
@@ -3866,6 +3866,10 @@ FrameBuffer架構</a><br>
 <a href="handheld/ggm/find_lcd.htm">
 找出LCD初始化代碼</a><br>
 
+&lowast;
+<a href="handheld/ggm/linux.htm">
+Linux系統刷機、解說細項</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
