Miyoo Mini I ported ppsspp emulator from original ppsspp project and adjust something I need. Here is the toturial about how to build ppsspp emulator for Miyoo Mini handheld.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5937,6 +5937,10 @@ SDL Key</a><br>
   build sdl2</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="handheld/miyoo-mini/parasyte_build_ppsspp.htm">
+  build ppsspp</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="handheld/miyoo-mini/parasyte_build_buildroot.htm">
   build buildroot</a><br>
 
