Miyoo Mini I ported openbor from original openbor github. It is based on SDL2 library. So, before run openbor, make sure you put correct SDL2 libraries.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5941,6 +5941,10 @@ SDL Key</a><br>
   build ppsspp</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="handheld/miyoo-mini/parasyte_build_openbor.htm">
+  build openbor</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="handheld/miyoo-mini/parasyte_build_buildroot.htm">
   build buildroot</a><br>
 
