SystemTap The first example of SystemTap is always classical hello program.

--- a/driver.htm
+++ b/driver.htm
@@ -232,6 +232,10 @@ Linux Device Driver (LDD)</h3>
   <a href="driver/ldd/systap_setup.htm">
   開發環境</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="driver/ldd/systap_hello.htm">
+  hello, world!</a><br>
+
 &lowast;
 <a href="driver/ldd/sysfs.htm">
 using sysfs</a><br>
