SystemTap There are 2 event types(sync and async) in SystemTap.

--- a/driver.htm
+++ b/driver.htm
@@ -248,6 +248,10 @@ Linux Device Driver (LDD)</h3>
   Overview</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="driver/ldd/systap_event.htm">
+  Event(SYNC、ASYNC)</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="driver/ldd/systap_hello.htm">
   hello, world!</a><br>
 
