--- a/driver/ldd/systap_event.htm
+++ b/driver/ldd/systap_event.htm
@@ -45,13 +45,13 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Linux Device Driver &gt;&gt; SystemTap</h3>
-<p><b>Event(SYNC、ASYNC)</b></p>
+<p><b>event(sync、async)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://sourceware.org/systemtap/SystemTap_Beginners_Guide/scripts.html">event</a><br><br>
 
-Event
+如下：
 </p>
 <table>
 <tr><th>Synchronous Events</th><th>Asynchronous Events</th></tr>
