CentOS vmcore analysis.

--- a/system.htm
+++ b/system.htm
@@ -346,6 +346,10 @@ CentOS</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="system/centos/vmcore.htm">
+vmcore分析</a><br>
+
+&lowast;
 <a href="system/centos/mongo_init.htm">
 初始化MongoDB</a><br>
 
