NDSL Linux In this tutorial, I show you how to build linux OS for NDSL handheld on Debian x64 platform.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5101,6 +5101,14 @@ Nintendo DS Lite</h3>
 &lowast;
 <a href="handheld/ndsl/teardown.htm">
 拆機</a><br>
+
+&oplus;
+<b>Linux</b><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="handheld/ndsl/linux_build.htm">
+  build all</a><br>
+
 <br><br><br><br>
 
 <div id="miyoo"></div>
