--- a/driver.htm
+++ b/driver.htm
@@ -259,6 +259,10 @@ Linux Device Driver (LDD)</h3>
   <a href="driver/ldd/systap_flows.htm">
   解析oneshot執行流程</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="driver/ldd/systap_oneshot_begin.htm">
+  oneshot、begin的差異</a><br>
+
 &lowast;
 <a href="driver/ldd/sysfs.htm">
 using sysfs</a><br>
