--- a/driver/ldd/systap_setup.htm
+++ b/driver/ldd/systap_setup.htm
@@ -55,9 +55,7 @@
 如下(debian bullseye x64)：
 </p>
 <pre>
-$ sudo apt-get install systemtap linux-headers-$(uname -r)
-$ sudo apt-get install coreutils-dbgsym
-$ sudo apt-get install systemtap linux-image-$(uname -r)-dbg
+$ sudo apt-get install systemtap linux-headers-$(uname -r) coreutils-dbgsym linux-image-$(uname -r)-dbg
 </pre>
 <p>
 P.S. 記得添加Debug Symbol Packages
