SystemTap In general, we should use root account to do all of commands.

--- a/driver.htm
+++ b/driver.htm
@@ -263,6 +263,10 @@ Linux Device Driver (LDD)</h3>
   <a href="driver/ldd/systap_oneshot_begin.htm">
   oneshot、begin的差異</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="driver/ldd/systap_fix_perm.htm">
+  解決"while resolving probe point"問題</a><br>
+
 &lowast;
 <a href="driver/ldd/sysfs.htm">
 using sysfs</a><br>
