Linux Device Driver Tainted kernel is more like used in development stage. Here are the lists for all of flags.

--- a/driver.htm
+++ b/driver.htm
@@ -272,6 +272,10 @@ Linux Device Driver (LDD)</h3>
 using sysfs</a><br>
 
 &lowast;
+<a href="driver/ldd/tainted_flags.htm">
+tainted flags</a><br>
+
+&lowast;
 <a href="driver/ldd/pr_vs_dev.htm">
 pr_xxx()、dev_xxx()</a><br>
 
