N900 Updated useful vim commands used by myself.

--- a/phone/n900/maemo/vimrc.htm
+++ b/phone/n900/maemo/vimrc.htm
@@ -61,19 +61,16 @@ $ vim ~/.vimrc
   set hlsearch
   set showmode
   set expandtab
-  set tabstop=2
+  set tabstop=4
+  set cursorline
   set autoindent
-  set shiftwidth=2
+  set shiftwidth=4
   set backspace=indent,eol,start
-  let &amp;t_Co=256
-  syntax on
-
-  set colorcolumn=90
-  set binary noendofline
-
-  set fileencodings=utf-8,gb2312,gb18030,gbk,ucs-bom,cp936,latin1
   set enc=utf8
   set fencs=utf8,gbk,gb2312,gb18030
+  set fileencodings=utf-8,gb2312,gb18030,gbk,ucs-bom,cp936,latin1
+  let &amp;t_Co=256
+  syntax on
 </pre><br>
 
 <p>
