CentOS vmcore analysis.

--- a/system/centos/vmcore.htm
+++ b/system/centos/vmcore.htm
@@ -62,6 +62,17 @@
 </p>
 <pre>
 # crash /usr/lib/debug/lib/modules/4.18.0-193.14.3.el8_2.x86_64/vmlinux vmcore_filename
+
+          KERNEL: /usr/lib/debug/lib/modules/4.18.0-193.14.3.el8_2.x86_64/vmlinux
+        DUMPFILE: vmcore  [PARTIAL DUMP]
+            CPUS: 12
+             ...:
+           PANIC: "BUG: unable to handle kernel NULL pointer dereference at 0000000000000115"
+             ...:
+         COMMAND: "kworker/5:1"
+            TASK: ffff91396df00000  [THREAD_INFO: ffff91396df00000]
+             CPU: 5
+           STATE: TASK_RUNNING (PANIC)
 </pre><br>
 
 <p>
