SystemTap In order to fix 'module version mismatch' issue, it is highly recommended to rebuild systemtap.

--- a/driver.htm
+++ b/driver.htm
@@ -264,6 +264,10 @@ Linux Device Driver (LDD)</h3>
   oneshot、begin的差異</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="driver/ldd/systap_fix_ver.htm">
+  解決"module version mismatch"問題</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="driver/ldd/systap_fix_perm.htm">
   解決"while resolving probe point"問題</a><br>
 
