Updated contact info

--- a/index.htm
+++ b/index.htm
@@ -83,7 +83,10 @@
 <b>重要記事</b><br>
 2021：網站文章數量達2500頁<br>
 2013：網站搬遷至GitHub<br>
-2003：於亞卓市創立司徒的教學網站
+2003：於亞卓市創立司徒的教學網站<br><br>
+
+<img style="vertical-align: middle;" src="index/linkedin.png"></img> <a href="https://www.linkedin.com/in/steward-fu-1428a0138/">Steward</a><br>
+<img style="vertical-align: middle;" src="index/gmail.png"></img> steward.fu@gmail.com
 </p><br>
 
 </div>
