Updated contact info.

--- a/index.htm
+++ b/index.htm
@@ -85,7 +85,7 @@
 2013：網站搬遷至GitHub<br>
 2003：於亞卓市創立司徒的教學網站<br><br>
 
-<img style="vertical-align: middle;" src="img/bg/linkedin.png"></img> <a href="https://www.linkedin.com/in/steward-fu-1428a0138/">Steward</a><br>
+<img style="vertical-align: middle;" src="img/bg/lk.png"></img> <a href="https://www.linkedin.com/in/steward-fu-1428a0138/">Steward</a><br>
 <img style="vertical-align: middle;" src="img/bg/gmail.png"></img> steward.fu@gmail.com
 </p><br>
 
