LeetCode 1920. Build Array from Permutation

--- a/program.htm
+++ b/program.htm
@@ -93,6 +93,7 @@
   <a href="#java"><img src="img/photos/java.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Java"/></a>
   <a href="#matlab"><img src="img/photos/matlab.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MATLAB"/></a>
   <a href="#lua"><img src="img/photos/lua.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="LUA"/></a>
+  <a href="#leetcode"><img src="img/photos/leetcode.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="LeetCode"/></a>
 </p>
 </div>
 
@@ -1395,6 +1396,20 @@ LUA</h3>
 &lowast;
 <a href="program/lua/build_luadec.htm">
 build luadec</a><br>
+<br><br><br><br>
+
+<div id="leetcode"></div>
+<h3><img src="img/photos/leetcode.jpg" class="floatLeft"/>
+LeetCode</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>C</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1920.htm">
+  1920. Build Array from Permutation</a><br>
+
 <br><br><br><br>
 
 </p>
