LeetCode 1480. Running Sum of 1d Array

--- a/program.htm
+++ b/program.htm
@@ -1407,6 +1407,10 @@ LeetCode</h3>
 <b>C</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1480.htm">
+  1480. Running Sum of 1d Array</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1920.htm">
   1920. Build Array from Permutation</a><br>
 
