LeetCode 268. Missing Number

--- a/program.htm
+++ b/program.htm
@@ -1422,6 +1422,13 @@ LeetCode</h3>
   <a href="program/leetcode/c_2011.htm">
   2011. Final Value of Variable After Performing Operations</a><br>
 
+&oplus;
+<b>C++</b><br>
+
+  &emsp;&emsp;&lowast;
+  <a href="program/leetcode/cpp_268.htm">
+  268. Missing Number</a><br>
+
 <br><br><br><br>
 
 </p>
