LeetCode 1480. Running Sum of 1d Array

--- a/program/leetcode/c_1480.htm
+++ b/program/leetcode/c_1480.htm
@@ -57,7 +57,8 @@
 答案：
 </p>
 <pre class="brush:cpp">
-int* runningSum(int *nums, int numsSize, int *returnSize){
+int* runningSum(int *nums, int numsSize, int *returnSize)
+{
     int c0=0;
     int *p=malloc(sizeof(int) * numsSize);
     
