LeetCode 1672. Richest Customer Wealth

--- a/program.htm
+++ b/program.htm
@@ -1411,6 +1411,10 @@ LeetCode</h3>
   1480. Running Sum of 1d Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1672.htm">
+  1672. Richest Customer Wealth</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1920.htm">
   1920. Build Array from Permutation</a><br>
 
