LeetCode 1512. Number of Good Pairs

--- a/program.htm
+++ b/program.htm
@@ -1415,6 +1415,10 @@ LeetCode</h3>
   1480. Running Sum of 1d Array</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1512.htm">
+  1512. Number of Good Pairs</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1672.htm">
   1672. Richest Customer Wealth</a><br>
 
