LeetCode 1365. How Many Numbers Are Smaller Than the Current Number

--- a/program.htm
+++ b/program.htm
@@ -1407,6 +1407,10 @@ LeetCode</h3>
 <b>C</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1365.htm">
+  1365. How Many Numbers Are Smaller Than the Current Number</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1431.htm">
   1431. Kids With the Greatest Number of Candies</a><br>
 
