--- a/program.htm
+++ b/program.htm
@@ -1407,6 +1407,10 @@ LeetCode</h3>
 <b>C</b><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1313.htm">
+  1313. Decompress Run-Length Encoded List</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1365.htm">
   1365. How Many Numbers Are Smaller Than the Current Number</a><br>
 
