LeetCode 1720. Decode XORed Array

--- a/program.htm
+++ b/program.htm
@@ -1435,6 +1435,10 @@ LeetCode</h3>
   1672. Richest Customer Wealth</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1720.htm">
+  1720. Decode XORed Array</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1920.htm">
   1920. Build Array from Permutation</a><br>
 
