LeetCode 1389. Create Target Array in the Given Order

--- a/program.htm
+++ b/program.htm
@@ -1415,6 +1415,10 @@ LeetCode</h3>
   1365. How Many Numbers Are Smaller Than the Current Number</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="program/leetcode/c_1389.htm">
+  1389. Create Target Array in the Given Order</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="program/leetcode/c_1431.htm">
   1431. Kids With the Greatest Number of Candies</a><br>
 
