GPD MicroPC This tutorial shows how to modify angle of view.

--- a/umpc.htm
+++ b/umpc.htm
@@ -995,6 +995,10 @@ GPD MicroPC</h3>
 介紹</a><br>
 
 &lowast;
+<a href="umpc/micropc/hinge.htm">
+仰角改造</a><br>
+
+&lowast;
 <a href="umpc/micropc/uart.htm">
 UART改造</a><br>
 
